welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	var T= new Array[color](getMondeHauteur())

	for (i<- 0 to getMondeHauteur()-1){

		T[i]=getCouleurSol();
		avance()
	}
}
